--- a/package.json
+++ b/package.json
@@ -27,15 +27,15 @@
     "next-seo": "^6.0.0",
     "nookies": "^2.5.2",
     "phosphor-react": "^1.4.1",
+    "prisma": "^4.15.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.1",
     "typescript": "4.9.5",
-    "zod": "^3.20.6"
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@rocketseat/eslint-config": "^1.2.0",
-    "@types/cookie": "^0.5.1",
-    "prisma": "^4.10.1"
+    "@types/cookie": "^0.5.1"
   }
 }
